--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@
 from github import Github
 
 # Replace with your personal access token
-access_token = "YOUR_ACCESS_TOKEN"
+access_token = "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"
 
 # Replace with the repository details
-owner = "OWNER"
-repo = "REPO"
+owner = "Rocky528"
+repo = "Giturbo_AI"
 
 # Labels to add
 labels = ["Giturbo:int", "Giturbo:gen", "Giturbo:review"]
